@@ -111,7 +111,7 @@
 
 .ArtifactImage {
     width: 4rem;
-    filter: brightness(25%);
+    filter: brightness(50%);
 
 }
 
@@ -156,7 +156,7 @@
 }
 
 .ArtifactIcon svg {
-    opacity: 0.05;
+    opacity: 0;
     fill: #ccc;
 }
 
@@ -293,4 +293,39 @@
 
 .ArtifactCollected .ArtifactImage {
     filter: none;
+}
+
+/* modifiers */
+
+.LedgerCardView.LedgerInverse .Artifact {
+    border: 1px solid #1d2026;
+    background-color: #303640;
+    box-shadow: 3px 3px 3px rgba(17, 17, 17, 0.25);
+
+}
+
+.LedgerCardView.LedgerInverse .ArtifactImage {
+}
+
+.LedgerCardView.LedgerInverse .ArtifactName {
+    color: #fff;
+}
+
+.LedgerCardView.LedgerInverse .ArtifactInfo {
+    opacity: 1;
+}
+
+.LedgerCardView.LedgerInverse .ArtifactCollected {
+    background-color: #23272e;
+    border: 1px solid transparent;
+    box-shadow: none;
+    color: #ccc;
+}
+
+.LedgerCardView.LedgerInverse .ArtifactCollected .ArtifactInfo {
+    opacity: 0.5;
+}
+
+.LedgerCardView.LedgerInverse .ArtifactCollected .ArtifactImage {
+    filter: brightness(50%);
 }
